Added text to typology slides and phonetics paper.

--- a/rstudio_dynamic_documents/phonetics_paper.Rmd
+++ b/rstudio_dynamic_documents/phonetics_paper.Rmd
@@ -4,11 +4,11 @@ subtitle: "A basic example"
 author: "Bradley McDonnell"
 date: "12/29/2018"
 output: html_document
-bibliography: bibliography.bib
+bibliography: bib/besemah-stress.bib
 ---
 
 
-<!-- Commenting is done via regular HTML tags. Comments will contain different excercises throughout this paper -->
+<!-- Commenting is done via regular HTML tags. Comments will contain different tasks throughout this paper -->
 
 <!-- TASK:
 1. Change the output of this document to a PDF file, a Word/ Open Office file.
@@ -29,7 +29,7 @@ library(knitr)
 library(kableExtra)
 
 # Loading the dataframe
-pse_stress <- read_tsv("../data/pse-stress-simplified.csv") %>% 
+pse_stress <- read_tsv("data/pse-stress-simplified.csv") %>% 
                           mutate(Word = fct_recode(Word),
                                 Position = fct_recode(Position),
                                 Vowel = fct_recode(Vowel),
@@ -50,31 +50,27 @@ pse_stress <- read_tsv("../data/pse-stress-simplified.csv") %>%
 --->
 
 
-# Introduction
-There has been much disagreement over the status of word-level stress in the languages of western Indonesia, particularly in regards to well-known varieties of Malay, such as Standard Indonesian [@vanzanten2003status]. Word-level stress has been claimed to fall predictably on the penultimate syllable unless it contains a schwa in which case it falls on the ultima \cite{adisasmito1996phonetic}. However, since the late 1990s, an increasing number of studies have questioned this position for Standard Indonesian [@vanzanten2004word], and more recent studies have pointed out the complications associated with studies of Standard Indonesian due to significant influence from substrate languages like Javanese [@goedemans2007stress].
-  
-  At the same time, there has been an increasing number of studies of prosodic prominence in other languages of western Indonesia that do not have the same complications associated with substrate influences. These studies also question the presence of word-level stress and propose that prosodic prominence is a property of the sentence and not the word. For example, based on a production experiment, Betawi Malay has been shown to lack any evidence for word-level stress, and pitch accents do not predictably anchor to a given syllable within a word [@vanheuven2008betawi]. Furthermore, again based on production experiments, Ambon Malay has been shown to lack any evidence for word-level stress, prosodically-marked focus, or pitch accents [@maskikit-essed2016no]. It remains an open question how widespread these features of prosodic prominence are in the languages of western Indonesia.
+# Introduction[^1]
+There has been much disagreement over the status of word-level stress in the languages of western Indonesia, particularly in regards to well-known varieties of Malay, such as Standard Indonesian [@vanzanten2003status]. Word-level stress has been claimed to fall predictably on the penultimate syllable unless it contains a schwa in which case it falls on the ultima [@adisasmito1996phonetic]. However, since the late 1990s, an increasing number of studies have questioned this position for Standard Indonesian [@vanzanten2004word], and more recent studies have pointed out the complications associated with studies of Standard Indonesian due to significant influence from substrate languages like Javanese [@goedemans2007stress].
 
+[^1]: Text from this example is lifted directly from McDonnell & Turnbull (2018).
+
+The present study is designed to tease apart different factors relating to prosodic prominence in Besemah. It does so by investigating the realization of common acoustic correlates of stress (f$_0$, duration, intensity, and spectral tilt) within target words that vary in their sentence position (sentence-medial vs. sentence-final position) and information status ('in focus' vs. 'out of focus').
 
 ## Besemah word level stress
-  Besemah /bəsəmah/ is an under-described Malayic language spoken in the highlands of southwest Sumatra by approximately 400,000 people [mcdonnell2016symmetrical]. It is considered a 'vernacular Malay' meaning it is primarily spoken as a first language and was regularly inherited from Proto-Malayic. This status distinguishes it from Standard Indonesian, which is primarily spoken as a second language, and Ambon Malay, which is a 'Pidgin-derived Malay' that was not regularly inherited from Proto-Malayic [@adelaar2005structural]. 
-
-  Like many of the languages of western Indonesia, Besemah has received little attention since the Dutch colonial period [@mcdonnell2008conservative]. The only study of Besemah prosody tentatively concluded that word-level stress in Besemah falls on the final syllable of the word and is cued by increased intensity [@mcdonnell2016acoustic]. However, there are several complications to this analysis, and word-level stress appears to be affected by the presence of final L boundary tones.
+Like many of the languages of western Indonesia, Besemah has received little attention since the Dutch colonial period [@mcdonnell2008conservative]. The only study of Besemah prosody tentatively concluded that word-level stress in Besemah falls on the final syllable of the word and is cued by increased intensity [@mcdonnell2016acoustic]. However, there are several complications to this analysis, and word-level stress appears to be affected by the presence of final L boundary tones.
   
-  The present study is designed to tease apart different factors relating to prosodic prominence in Besemah. It does so by investigating the realization of common acoustic correlates of stress (f$_0$, duration, intensity, and spectral tilt) within target words that vary in their sentence position (sentence-medial vs. sentence-final position) and information status ('in focus' vs. 'out of focus').
-
 
 # Methods
+This section describe the methodology used in this study.
 
 ## Design
-The experiment was designed to elicit target words that vary along two dimensions, sentence position and information status. This part of the design is similar to the study of Betawi Malay [@vanheuven2008betawi].    
-
-Target words were collected using an information gap task. This task involved two talkers: a confederate who asked questions and a naive participant who answered them. They sat facing each other, each able to see only their own laptop screen. Both the confederate and participant could see a question on the top of the screen that the confederate was to ask, but only the participant's screen displayed the answer. The confederate also had a sheet of paper with all possible answers. The task was for the confederate to ask the question and the participant to provide an answer in a complete sentence modeled upon the question. The confederate then circled the answer on the paper. One female native speaker of Besemah acted as the confederate for all participants.
+Target words were collected using an information gap task. This task involved two talkers: a confederate who asked questions and a naive participant who answered them. They sat facing each other, each able to see only their own laptop screen. Both the confederate and participant could see a question on the top of the screen that the confederate was to ask, but only the participant's screen displayed the answer.The task was for the confederate to ask the question and the participant to provide an answer in a complete sentence modeled upon the question. The confederate then circled the answer on the paper. One female native speaker of Besemah acted as the confederate for all participants.
   
 ## Materials
-Question-answer pairs were constructed which varied in information status (target word 'in focus' or 'out of focus') and sentence position (target word sentence-medial or sentence-final). The type and structure of the question depended upon the combination of its sentence position and information status. Question type differed based upon whether the target word was 'in focus' or 'out of focus'.[^1] The sentence position simply altered the shape of the question so that the target word would occur in sentence-medial or sentence-final position. The table below presents example question-answer pairs for the 'in focus' condition. In this table the target word *susu* 'milk' is used as an example and displayed in boldface.    
+Question-answer pairs were constructed which varied in information status (target word 'in focus' or 'out of focus') and sentence position (target word sentence-medial or sentence-final). The type and structure of the question depended upon the combination of its sentence position and information status. Question type differed based upon whether the target word was 'in focus' or 'out of focus'.[^2] The sentence position simply altered the shape of the question so that the target word would occur in sentence-medial or sentence-final position. The table below presents example question-answer pairs for the 'in focus' condition. In this table the target word *susu* 'milk' is used as an example and displayed in boldface.    
 
-[^1]: 'Focus', as a term of art in linguistics, is fraught with definitional difficulties. In our 'in focus' condition,   the target word is the answer to the current question under discussion [@roberts2012]. In the 'out of focus' condition, on the other hand, the target word is given, not new [@schwarzschild1999]. This definition may not match exactly with the definitions used by other researchers, and we invite the reader to mentally substitute their favorite terms that fit their proclivities if they are so inclined.
+[^2]: 'Focus', as a term of art in linguistics, is fraught with definitional difficulties. In our 'in focus' condition,   the target word is the answer to the current question under discussion [@roberts2012]. In the 'out of focus' condition, on the other hand, the target word is given, not new [@schwarzschild1999]. This definition may not match exactly with the definitions used by other researchers, and we invite the reader to mentally substitute their favorite terms that fit their proclivities if they are so inclined.
   
 |**Position** |       |    **Question/Answer**                    |  
 |-------------|-------|-------------------------------------------|
@@ -136,6 +132,7 @@ The twelve target words are shown in the table below. Syllables in Besemah are m
 
 Table: Target words used in constructing question-answer pairs.
 
+
 ## Procedure
 There were four experimental blocks that combined the possible combinations of information status and sentence position: 
 
@@ -157,11 +154,10 @@ All recordings were made on a Marantz PMD-670 solid state recorder with a sampli
   age from 19 to 30 years old.
 
 # Acoustic correlates of stress
-This section takes a look at the acoustic correlates of stress in Besemah. 
+This section takes a preliminary look at the acoustic correlates of stress in Besemah. 
 
 ## Duration
 Duration in the final syllable appears to be longer compared to duration of the first syllable.
-
 
 <!--TASK: Adjusting figures
 
@@ -176,42 +172,45 @@ dur <- ggplot(pse_stress, aes(Position, Duration))
 dur + geom_boxplot() + coord_flip()
 ```
 
-As expected, when the word 
+As expected, when the word is in the final position in the sentence, the duration is longer.  
 
 ```{r duration-final}
 # A simple boxplot of intensity
 dur <- ggplot(pse_stress, aes(Position, Duration))
-dur + geom_boxplot() + facet_grid(~Final) + coord_flip()
+dur + geom_boxplot() + facet_wrap(~Final, ncol = 1) + coord_flip()
 ```
 
-
+The table below demonstrates the mean duration for each of the six participants in both sentence final and sentence medial positions. 
 
 ```{r duration-mean, result='asis'}
 pse_stress %>% 
-  group_by(Participant, Final) %>%
+  group_by(Participant, Final, Position) %>%
   summarize(Duration = round(mean(Duration), 3)) %>%
   kable(format = 'html') %>%
   kable_styling(full_width = FALSE) %>%
   column_spec(1, bold = T) %>%
-  collapse_rows(columns = 1, valign = "top")
+  collapse_rows(columns = 1:2, valign = "middle")
 ```
 
 ## Intensity
 
 ```{r intensity}
 # A simple boxplot of intensity
-int <- ggplot(pse_stress, aes(Position, Intensity))
-int + geom_boxplot() + facet_grid(~Final)
+int <- ggplot(pse_stress, aes(Position, Intensity, fill=Final))
+int + geom_boxplot() + facet_wrap(~Participant)
 ```
+
 
 ## Pitch
 
 ```{r pitch}
 # A simple boxplot of intensity
-f0 <- ggplot(pse_stress, aes(Position, F0))
+f0 <- ggplot(pse_stress, aes(Position, F0, fill=Final))
 f0 + geom_boxplot() + facet_wrap(~Participant)
 ```
 
+
 # Conclusion
+There are some interesting data here, but we cannot conclude much at this point. 
 
 # References
