Updated dynamic document slides

--- a/docs/dynamic_docs/dynamic_docs.Rmd
+++ b/docs/dynamic_docs/dynamic_docs.Rmd
@@ -25,12 +25,12 @@ options(htmltools.dir.version = FALSE)
 
 # Dynamic documents
 
-- To my knoweledge term coined by Yihui Xie for the R package `knitr` based on earlier versions of `Sweave`
-- `knitr`allows us to create documents in various formats (e.g., LateX, Markdown) with various outputs (HTML slides, `Shiny` apps, PDF documents), all of which combines Markup and executable code.
-- In the breakout section, we'll primarily work with **RMarkdown**, an *R-flavor* of traditional Markdown.
-  - I will show one example of `knitr` with LaTeX
+- "Dynamic documents" was coined by Yihui Xie for the R package `knitr` based on earlier versions of `Sweave`
+- `knitr` allows us to create documents in various formats (e.g., LateX, Markdown) with various outputs (HTML slides, `Shiny` apps, PDF documents), all of which combines Markup and executable code.
 
 ![](https://d33wubrfki0l68.cloudfront.net/61d189fd9cdf955058415d3e1b28dd60e1bd7c9b/b739c/lesson-images/rmarkdownflow.png)
+
+- In the breakout section, we'll primarily work with **R Markdown**, an *R-flavor* of traditional Markdown.
 
 ---
 
@@ -142,7 +142,7 @@ pse_stress <- read_tsv("data/pse-stress-simplified.csv") %>%
                                 Vowel = fct_recode(Vowel),
                                 Weight = fct_recode(Weight),
                                 Focus = fct_recode(Focus),
-                                Final = fct_recode(Final),
+                                Final = fct_recode(Final)
                                 )
                                       
 # A simple boxplot of intensity
@@ -169,7 +169,7 @@ pse_stress <- read_tsv("data/pse-stress-simplified.csv") %>%
                                 Vowel = fct_recode(Vowel),
                                 Weight = fct_recode(Weight),
                                 Focus = fct_recode(Focus),
-                                Final = fct_recode(Final),
+                                Final = fct_recode(Final)
                                 )
                                       
 # A simple boxplot of intensity
